<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/top_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentTop="true"
        android:background="@drawable/menu_bg09" >

        <LinearLayout
            android:id="@+id/left_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:background="@drawable/btn_newsinfo_selector"
                android:paddingLeft="@dimen/dp_8"
                android:text="@string/_back_text"
                android:textColor="@color/argb_ffffff"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sys_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/_user_register_text"
                android:textColor="@color/argb_ffffff"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_register"
        android:background="@color/argb_line" >

        <TextView
            android:id="@+id/tv1_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/dp_50"
            android:text="@string/_user_register_text"
            android:textSize="@dimen/sp_20" />

        <LinearLayout
            android:id="@+id/ll_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv1_register"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/_username_tv_register"
                android:textSize="@dimen/sp_18" />

            <EditText
                android:id="@+id/username_et_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/_input_username" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_userpass_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_username_register"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/_userpass_text"
                android:textSize="@dimen/sp_18" />

            <EditText
                android:id="@+id/userpass_et_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/userpass_hint"
                android:inputType="textPassword"
                android:minWidth="@dimen/dp_100" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_userpass_register"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ok_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_simple_selector"
                android:minHeight="@dimen/dp_50"
                android:minWidth="@dimen/dp_100"
                android:text="@string/_register_btn_text"
                android:textColor="@color/argb_ffffff"
                android:textSize="@dimen/sp_18" />

            <Button
                android:id="@+id/cancel_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/btn_simple_selector"
                android:minHeight="@dimen/dp_50"
                android:minWidth="@dimen/dp_100"
                android:text="@string/_cancel_text"
                android:textColor="@color/argb_ffffff"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

       
        <include
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_btn_register"
            layout="@layout/thrid_login" /> 
    </RelativeLayout>

</RelativeLayout>